# user-crud

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
docs/: full-commands-set.md  helm.md  how-to-start.md
docs/architect/: openapi.yaml
helm-chart/: Chart.yaml  values.yaml
helm-chart/charts/: postgresql-0.1.0.tgz  postgresqlPvPvc-0.1.0.tgz  postgresqlStorageClass-0.1.0.tgz
helm-chart/charts/postgresql/: Chart.yaml  values.yaml
helm-chart/charts/postgresql/templates/: pv-pvc.yaml  storageclass.yaml
helm-chart/charts/pv-pvc/: Chart.yaml  values.yaml
helm-chart/charts/pv-pvc/templates/: pv-pvc.yaml
helm-chart/charts/storage/: Chart.yaml  values.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/: configmap.yaml  db-migration-job.yaml  debug-pod.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/postgresql/: pv-pvc.yaml  values.yaml
migrations/: env.py  initial.sql
migrations/versions/: 17f98b0aca06_initial_migration.py  9cd8fa9f425b_initial_migration.py
postman/: otus-app-health.postman_collection.json  user_crud.postman_collection.json  user_crud.postman_collection.result.txt
src/app/: main.py
src/app/api/: dependencies.py  routers.py
src/app/api/health/: endpoint.py
src/app/common/: database.py  singleton.py
src/app/config/: logger.py  settings.py
src/app/schemas/: internal.py
src/tests/api/: conftest.py  helper.py  test_health.py  test_user_create.py  test_user_delete.py  test_user_fields.py  test_user_read.py  test_user_update.py
(+6 files in other folders)
