[tool.poetry]
name = "user-crud"
version = "0.1.0"
description = ""
authors = ["Aleksandr Chugaynov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
fastapi = "^0.115.11"
starlette = "^0.46.1"
logging = "^0.4.9.6"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-postgresql = "^7.0.1"
pytest-docker = "^3.2.1"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
